src/main/resources/static/style.css
@media only screen and (max-width: 520px) {
	.book-card {
		min-width: 390px;
	}
}

@media only screen and (min-width: 521px){
	.book-card {
		max-width: 250px;
		min-width: 200px;
	}
}

#book-card {
	background-image: url(images/body.jpg);
}

body {
	background-image: url(images/body.jpg);
	overflow-x: hidden;
}

#offcanvasResponsive {
	background-image: url(images/left_column.jpg);
	background-repeat: repeat;
}

.left_column_boxes {
	border: 1px dotted #AA8661!important;
	border: none;
	padding: 3px;
	margin-bottom: 20px;
}



/*-----------TEXT FORMATTING------------- */

p {
	color: #814F2C;
}

h3 {
	color: #926B4A;
}

h4 {color: #926B4A;
}




.news:first-letter {
	font-family: "Times New Roman", Times, serif;
	font-size: 1.4em;
	font-weight: bold;
}

a:link, a:visited, a:active  {color: #666600}
a:hover {color: #805D3F}


/*-------------- Navigation --------------*/

#navcontainer {
}

#navcontainer ul {
	list-style-type: none;
}

#navcontainer a {
	display: block;
	padding: 3px;
	border-bottom: 1px solid #A47F52;
	font-weight: bold;
	height: 1.5em;
}

#navcontainer a:link, #navlist a:visited {
	color: #65391E;
	text-decoration: none;
	font-style: italic;
}

#navcontainer a:hover {
	color: #fff;
	font-style: normal;
	background-image: url(images/menu_hover.png)!important;
	background: none;
}

/*------------ Contact form -----------------*/

label {
	font-style: italic;
}

form.contact_us {
	width: 170px;
}

input.fields_contact_us {
	display: block;
	width: 170px;
	background: url(images/menu_hover.png)!important;
	background: none;
	border-top: 1px solid #C0935C;
	border-left: 1px solid #C0935C;
	border-bottom: 1px solid #D9B17D;
	border-right: 1px solid #D9B17D;
	margin-top: 3px;
	margin-bottom: 3px;
}

textarea {
	width: 170px;
	background: url(images/menu_hover.png)!important;
	background: none;
	border-top: 1px solid #C0935C;
	border-left: 1px solid #C0935C;
	border-bottom: 1px solid #D9B17D;
	border-right: 1px solid #D9B17D;
	display: block;
	margin-top: 3px;
}

.submit_button_contact {
	margin-top: 15px;
	width: 100%;
	padding: 2px;
	background: none;
	cursor: pointer;
	color: #926B4A;
	border: none;
	font-size: 1.8em;
	font-weight: bold;
	font-family: "Times New Roman", Times, serif;
	font-style: italic;
}

